@@ -9,8 +9,6 @@
 ;; $Id: http.scm,v 1.4 2006/10/08 01:36:20 bizenn Exp $
 (define-module kahua.protocol.http
   (use srfi-1)
-  (use srfi-13)
-  (use srfi-14)
   (use rfc.cookie)
   (use rfc.uri)
   (use util.list)
@@ -23,10 +21,6 @@
   (use kahua.protocol.worker)
   (export *default-content-type*
 	  http-date
-	  path->path-info
-	  path-info->abs-path
-	  normalize-path
-	  rel-path-info
 	  parse-path-info
 	  unsupported-method?
 	  abs-uri
@@ -50,37 +44,6 @@
 
 (define (http-date t)
   (time->rfc1123-string t))
-
-;; This function assumes path is already applied uri-decode-string.
-(define (path->path-info path)
-  (define (simplify-path-info path-info)
-    (reverse!
-     (fold (lambda (comp res)
-	     (cond ((string-null? comp) res)
-		   ((string=? "." comp) res)
-		   ((string=? ".." comp)
-		    (if (null? res)
-			res
-			(cdr res)))
-		   (else (cons comp res))))
-	   '()
-	   path-info)))
-  (simplify-path-info (string-split path #[/])))
-
-(define (path-info->abs-path path-info)
-  (if (null? path-info)
-      "/"
-      (string-join path-info "/" 'prefix)))
-
-(define normalize-path (compose path-info->abs-path path->path-info))
-
-(define (rel-path-info path-info base-info)
-  (let loop ((p path-info)
-	     (b base-info))
-    (cond ((null? b) p)
-	  ((null? p) #f)
-	  ((string=? (car p) (car b)) (loop (cdr p) (cdr b)))
-	  (else #f))))
 
 ;; path-info list -> scheme host port worker args
 ;;
